# Synze

./: CMakeLists.txt  Interpreter.cpp  Interpreter.hpp  README.md  Token.hpp  a.synze  example.syntax  example.synze  main.cpp  syntaxium.cpp
